k8s/base/api-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: template
  labels:
    app: template-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template-api
  template:
    metadata:
      labels:
        app: template-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api
          image: ghcr.io/olyxz16/go-chi-oauth-psql/api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
