k8s/base/api-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: template
spec:
  selector:
    app: template-api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
